--- a/index.html
+++ b/index.html
@@ -13,7 +13,7 @@
     <script src="https://code.jquery.com/ui/1.12.1/jquery-ui.js"></script>
     <script src="script.js"></script>
     <link rel="stylesheet" type="text/css" href="style.css" />
-    <title>Windows Template</title>
+    <title>Ranam's Projects</title>
   </head>
   <body>
     <div id="desktop">
