--- a/index.html
+++ b/index.html
@@ -22,6 +22,7 @@
       <div class="window closed" data-title="Third">
         Third window starts closed
       </div>
+      <div class="window closed" data-title="Fourth">
       <div class="window" data-title="Welcome">
         <h1>Welcome to my portfolio</h1>
         <p>
@@ -46,6 +47,7 @@
         <a class="openWindow" data-id="1">Open second</a>
         <a class="openWindow" data-id="2">Open third</a>
         <a class="openWindow" data-id="3">Welcome screen</a>
+        <a class="openWindow" data-id="4">Open Fourth</a>
       </div>
     </div>
   </body>
