--- a/index.html
+++ b/index.html
@@ -11,7 +11,7 @@
     <link rel="preconnect" href="https://fonts.googleapis.com">
 <link rel="preconnect" href="https://fonts.gstatic.com" crossorigin>
 <link href="https://fonts.googleapis.com/css2?family=Gaegu&display=swap" rel="stylesheet">
-<link rel="icon" type="image/png" href="favicon.png">
+<link rel="icon" type="image/png" href="assets/favicon.png">
 
   </head>
   <body class="">
@@ -22,7 +22,7 @@
         <div class="text-center -mb-6">
           <img
             class="w-32 h-32 mb-4 mx-auto rounded-full object-contain"
-            src="img.jpeg"
+            src="assets/img.jpeg"
             alt="Your Name"
           />
           <h1 class="text-4xl font-semibold mt-2" style="font-family: Gaegu; color:#4b2b59;">Ranam Hamoud</h1>
