--- a/index.html
+++ b/index.html
@@ -33,7 +33,7 @@
         <div class="text-center mb-4">
           <h3 class="text-2xl font-semibold mb-2">About Me</h3>
           <p class="text-gray-600">
-            I am a Computer Engineer specialized in Computational Data Science based in Beirut, Lebanon. I am passionate about AI, Human-Computer Interaction, education, and computer science. In my free time, I enjoy solving crosswords and listening to music.          </p>
+            I am a Computer Engineer specialized in Computational Data Science based in Beirut, Lebanon. I am passionate about AI, Human-Computer Interaction, education, and computer science. In my free time, I enjoy solving<a class="text-purple-600 ml-1" href="assets/Solve it!.pdf" target="_blank">crosswords</a> and listening to music.          </p>
         </div>
         <hr></hr>
         <div class="mb-4">
